# app_mercadinho

./: .gitignore  apppost.py  cliente.py  database.py  debug.py  estoque_mercadinho.json  main.py  pyproject.toml  requirements.txt
